# p.IVA

./: .env.example  .gitignore  README.md  SKILL.md  conftest.py  dashboard.html  demo.py  docker-compose.yml  pyproject.toml  requirements.txt
agents/: aa9_telematico.py  agent0_wizard.py  agent3_calculator.py  agent4_compliance.py  agent6_scheduler.py  agent8_invoicer.py  agent9_notifier.py  lookup_piva.py  supervisor.py
agents/agent0_wizard/: AGENT.md  __main__.py  cli.py  explainer.py  index.html  models.py  onboarding.py  redis_publisher.py  simulator.py  wizard.py
agents/agent10_normative/: AGENT.md  diff_engine.py  models.py  parser.py  redis_publisher.py  scheduler.py  sources.py  updater.py  watcher.py
agents/agent1_collector/: AGENT.md  __init__.py  collector.py  models.py
agents/agent2_categorizer/: AGENT.md  __init__.py  categorizer.py  models.py
agents/agent3_calculator/: AGENT.md  calculator.py  models.py  redis_publisher.py
agents/agent3b_validator/: AGENT.md  models.py  redis_publisher.py  validator.py
agents/agent4_compliance/: AGENT.md  __init__.py  compliance.py
agents/agent5_declaration/: AGENT.md  __init__.py  declaration.py  models.py
agents/agent6_scheduler/: AGENT.md  models.py  redis_publisher.py  scheduler.py
agents/agent7_advisor/: AGENT.md  __init__.py  advisor.py
agents/agent8_invoicer/: AGENT.md
config/: settings.py
shared/: ateco_coefficients.json  f24_tax_codes.json  f24_template.json  forfettario_limits.json  inps_rates.json  tax_calendar.json
tests/: e2e_scenario_01.py  test_flusso_completo.py
web/: app.py
(+63 files in other folders)
