[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "fiscalai"
version = "0.1.0"
description = "Sistema multi-agente per gestire il ciclo fiscale di un forfettario italiano"
requires-python = ">=3.9"
dependencies = [
    "redis>=5.0",
    "anthropic>=0.40",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]
vault = [
    "psycopg2-binary>=2.9",
    "cryptography>=41.0",
]

[tool.pytest.ini_options]
testpaths = ["agents", "shared", "integrations", "tests"]
markers = [
    "integration: requires external services (Redis, PostgreSQL)",
    "slow: slow tests",
]

[tool.setuptools.packages.find]
include = ["agents*", "shared*", "integrations*"]
